--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,6 +18,7 @@ jobs:
           npm install
           npm run lint
   test:
+    name: Test the action
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
@@ -30,5 +31,5 @@ jobs:
         uses: actions/setup-node@v1.2.0
         with:
           node-version: 12.x
-      - name: Install Google Cloud SDK
+      - name: Run the action
         uses: ./
